
Since we cannot compute Percentage of Nos, we compare:

SUM of Nos from GESIS with Employment rate, by sex from Estatwrap from Germany.

This would show: Integration of Germany. 

In ISEM paper, we had with respect to size of datasets:

1) 2 DS with 20,268 triples
3a) 4 DS with 24,636 triples
3b) 8 DS with 35,482 triples

We now would like to extend this.

==2014-07-10==
Problem: Starting from the query over the global dataset, we currently do not properly "unfold" the query given the "available datasets". 
Solution: We should: Only drill-across over datasets that 1) show one of the queried measures, 2) does have all the "inquired dimensions" 3) dices only available dimensions.
Hint: This is quite important. The datasets in the FROM clause do NOT indicate a drill-across over the datasets, since the drill-across will most likely be empty. Instead, we are querying a global cube that can be build from those single cubes.

* Refactored building of Logical Query Plan.
* Now using "definition" of global cube, i.e., drill-across of all fitting datasets.

Problem: We should not concat header if all measures are the same. We should update metadata accordingly.
Solution: done

Problem: Again, what does the convert-cube operation do? I think, it removes the implicit measures.
Solution: As soon as we use convert-cube, we only work with the non-implicit measures. 

* Outer-join in case all measures are the same (is that really the case?)
* We should be querying over all datasets (scenario).
* Do I have a case where I only need information from a subset of datasets?
* E.g., if I query EU2020 with specific measures and take allbus into account. 

* Features that we need to "evaluate"
** Concrete measures (UNEMPLOY) <= Here, we only need information from a subset of datasets.
** Not concrete measures (UNEMPLOY)
** Concrete measures (EU2020 4/8)
** Compound measure (UNEMPLOY)

What do we have:

* EMPLOY with two datasets, specific measures